fix text overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Manrope', sans-serif;
+    font-family: ‘Manrope’, sans-serif;
 }
-
 .container {
     width: 100vw;
     height: 100vh;
@@ -16,7 +15,7 @@
 .card {
     position: relative;
     width: 33.7em;
-    height: 20.8em;
+    /* height: 20.8em; */
     background-color: hsl(217, 19%, 24%);
     border-radius: 1rem;
     display: flex;
@@ -24,20 +23,17 @@
     justify-content: center;
     align-items: center;
 }
-
 .advice {
-    position: absolute;
-    top: 0;
+    position: relative;
+    /* top: 0; */
     padding: 50px 50px 0;
     text-align: center;
 }
-
 .advice span {
     color: hsl(150, 100%, 66%);
     font-weight: 800;
     letter-spacing: 5px;
 }
-
 #advice-text {
     padding-top: 35px;
     padding-bottom: 40px;
@@ -46,12 +42,12 @@
     font-weight: 800;
 }
 .divider {
-    position: absolute;
-    bottom: 80px;
+    position: relative;
+    /* bottom: 80px; */
+    margin-bottom: 1rem;
 }
-
 .dice {
-    position: absolute;
+    position: relative;
     bottom: -32.5px;
     display: flex;
     justify-content: center;
@@ -61,11 +57,9 @@
     height: 65px;
     background-color:  hsl(150, 100%, 66%);
 }
-
 .dice:hover {
     box-shadow: 0px 0px 20px 0px hsl(150, 100%, 66%);
 }
-
 .dice img {
     width: 25px;
     height: 25px;
